# SerPy

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
data/Hexagonal_modulator/: Carbon_tubes_ref_800mm_0_00003_img.edf  Carbon_tubes_sample_800mm_0_00002_img.edf
data/random_modulator/: Carbon_tubes_ref_800mm_0_00003_img.edf  Carbon_tubes_sample_800mm_0_00002_img.edf
examples/: exemple.ipynb
src/Serpy/: __init__.py  statdf.py
